# RL-course

./: pyproject.toml
hw1/: deep-crossentropy-method.ipynb  gym_pipe.py  utils.py
hw2/: hw-2-value-policy-iteration.ipynb  mdp.py
week3_model_free/: Section3_qlearning_evsarsa.ipynb
week4_dqn/: seminar_cartpole_dqn solved.ipynb
week5_policy_gradient/: reinforce_pytorch solved.ipynb
