[tool.poetry]
name = "rl-course"
version = "0.1.0"
description = ""
authors = ["AndBoyS <andboyxd@gmail.com>"]
readme = "README.md"
packages = [{include = "rl_course"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
imageio-ffmpeg = "^0.4.7"
Gymnasium = {extras = ["classic_control"], version = "^0.26.3"}
ipython = "^8.6.0"
ipykernel = "^6.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
